[openssl-3] Packaging for OpenSSL-3
Signed-off-by: Björn Bidar <bjorn.bidar@jolla.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "openssl"]
-	path = openssl
+[submodule "upstream"]
+	path = upstream
 	url = https://github.com/sailfishos-mirror/openssl.git
